// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DeleteModal Component should render - no props 1`] = `
<ConfirmationModal
  confirmVerb="Delete"
/>
`;

exports[`DeleteModal Component should render closed with props 1`] = `
<ConfirmationModal
  confirmVerb="Delete"
  handleDelete={[Function]}
  handleToggle={[Function]}
  open={false}
  text="Got Damn"
  title="NoobNoob"
/>
`;

exports[`DeleteModal Component should render open with props 1`] = `
<ConfirmationModal
  confirmVerb="Delete"
  handleDelete={[Function]}
  handleToggle={[Function]}
  open={true}
  text="Got Damn"
  title="NoobNoob"
/>
`;
